css/style.css
body {
    font-family: Helvetica, Arial, sans-serif;
    padding: 5% 10%;
    background-color: #f4f4f5;
    line-height: 1.5;
    color: #333;
    margin: 0 auto;
}

.container {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

main {
    flex: 1;
}

@media (max-width: 600px) {
    body {
        padding: 10%;
        max-width: 90%;
    }
}

h1,
h2,
h3 {
    font-family: Georgia, serif;
    margin-top: 1em;
    margin-bottom: 0.8em;
    color: #222;
}

h1 {
    font-weight: bold;
}

p {
    font-size: 1.2em;
    margin-top: 0.4em;
    margin-bottom: 0.8em;
    line-height: 1.5;
}

li {
    font-size: 1.2em;
    margin-bottom: 0.2em;
}

ul {
    margin-bottom: 0.6em;
    padding-left: 1.2em;
}

a {
    color: #0066cc;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

a:visited {
    color: #8b5cf6;
}

iframe {
    display: block;
    margin: 1.5em auto;
    max-width: 100%;
    border: 0;
}

/* Images */

.gallery {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-auto-rows: auto;
    grid-auto-flow: dense;
    gap: 0.4em;
}

@media (max-width: 1024px) {
    .gallery {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (max-width: 600px) {
    .gallery {
        grid-template-columns: 1fr;
    }
}

img {
    width: 100%;
    height: auto;
    object-fit: cover;
}

/* Image to right of paragraphs of text */

.text-image-container {
    display: flex;
    align-items: flex-start;
    gap: 1em;
}

.text-image-container figure {
    flex-shrink: 0;
}

.text-image-container figure img {
    width: 100%;
    max-width: 20em;
    height: auto;
}

figcaption {
    font-size: 0.8em;
    margin-top: 0.5em;
}

/* Top navigation menu */

.topnav {
    background-color: #333;
    overflow: hidden;
    height: 3.5em; /* Stops topnav breaking onto two lines when resized */
}

.topnav a {
    float: left;
    display: block;
    color: #f2f2f2;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
    border: 1px solid #a1a1aa;
    border-right: none; /* Prevent borders from doubling up between menu items */
}

/* Penultimate child is last menu item (last is mobile menu) */
.topnav a:nth-last-child(2) {
    border-right: 1px solid #a1a1aa;
}

.topnav a.site-name {
    float: left;
    display: block;
    background-color: #3f3f46;
    font-family: Georgia, serif;
    color: #f2f2f2; 
    text-decoration: underline;
    text-decoration-color: #89CC04;
    text-underline-offset: 0.3em;
    text-align: center;
    white-space: nowrap;
    padding: 14px 16px;
    font-size: 17px;
    margin: 0;
    border: #3f3f46 1px solid;
}

.topnav a:hover {
    background-color: #ddd;
    color: black;
}

.topnav a.site-name:hover {
    background-color: #3f3f46;
    color: #f2f2f2;
}

.topnav a.icon:hover {
    background-color: transparent;
}

.topnav .icon {
    display: none;
}

/* Footer */

footer p {
    margin-top: 4em;
    font-size: 1em;
    text-align: center;
}

/* Contact form */

.form-container {
    background: #fff;
    padding-left: 1.5em;
    padding-right: 3em;
    padding-top: 1.5em;
    padding-bottom: 1.5em;
    border-radius: 0.5em;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    width: 80%;
    max-width: 25em;
    margin-bottom: 1em;
    background-color: #f1f5f9;
  }

  label {
    font-size: 1em;
    font-family: Georgia, serif;
    font-weight: bold;
    color: #555;
    margin-bottom: 0.25em;
    display: block;
  }

  input, textarea {
    width: 100%;
    padding: 0.8em;
    margin-bottom: 1em;
    border: 1px solid #ddd;
    border-radius: 0.25em;
    font-size: 0.9em;
    font-family: Helvetica, Arial, sans-serif;
    color: #333;
    resize: vertical;
  }

  textarea {
    min-height: 6em;
  }
  
  input:focus, textarea:focus {
    border-color: #007bff;
    outline: none;
    box-shadow: 0 0 3px rgba(0, 123, 255, 0.3);
  }
  
  button {
    padding: 0.6em 1.2em; 
    background-color: #89CC04;
    font-family: Helvetica, Arial, sans-serif;
    color: black;
    font-size: 0.9em;
    font-weight: bold;
    border: none;
    border-radius: 0.25em;
    cursor: pointer;
  }
  
  button:hover {
    background-color: #a3e635;
  }

  form h1 {
    font-size: 1.5em;
    margin-bottom: 1.2em;
    text-align: center;
    color: #333;
  }
  
/* Image on bio page goes below text under 1000px width */

@media (max-width: 1000px) {
    .text-image-container {
        display: flex;
        align-items: center;
        flex-direction: column;
        gap: 1em;
    }

    .text-image-container figure img {
        width: 100%;
        height: auto;
    }
}

/* Syanesthesia game */

@media (min-width: 900px) {
    .mobile-game {
        display: none;
    }
}

@media (max-width: 900px) {
    .desktop-game {
        display: none;
    }
}

/* Mobile */

/* Top nav */

@media (max-width: 600px) {

    .topnav {
        background-color: #3f3f46;
        height: auto;
    }

    .topnav a.menu {
        background-color: #333;
    }

    /* Menu closed */
    .topnav a:not(:first-child) {
        display: none;
    }

    .topnav a.icon {
        float: right;
        display: block;
        border: none;
    }

    /* Closed menu hamburger layout */

    /*Top line */
    .hamburger span:nth-child(1) {
        transform: translateY(-0.4em);
    }

    /* Bottom line */
    .hamburger span:nth-child(3) {
        transform: translateY(0.4em);
    }

    /* Vertical line to transform three unbroken lines into three broken lines */
    .hamburger .yin {
        position: absolute;
        transform: rotate(90deg);
        background-color: transparent;
    }

    .hamburger {
        display: flex;
        align-items: center;
        width: 1.6em;
        height: 1.6em;
        position: relative;
        cursor: pointer;
    }

    .hamburger span {
        position: absolute;
        display: block;
        background-color: white;
        width: 100%;
        height: 0.2em;
        transition: all 0.2s ease-in-out;
    }

    /* Menu open */

    /* Target topnav when it has open class applied by hamburger.js */
    .topnav.open {
        position: relative;
    }

    .topnav.open a.icon {
        position: absolute;
        right: 0;
        top: 0;
    }

    .topnav.open a {
        float: none;
        display: block;
        text-align: left;
    }

    .topnav.open a.site-name {
        float: none;
        display: block;
        text-align: left;
    }

    /* Show menu when toggled */
    .topnav.open .hamburger ul {
        display: flex;
    }

    .topnav.open .hamburger .yin {
        background-color: #3f3f46;
    }

    .topnav.open a {
        border-bottom: none;
        /* Prevent border overlap between menu items stacked on top of each other */
    }

    /* Penultimate child is last menu item (last child is hamburger) */
    .topnav.open a:nth-last-child(2) {
        border-bottom: 1px solid #a1a1aa;
    }

    .topnav.open a.menu:hover {
        background-color: #ddd;
        color: black;
    }
}

